@@ -6,11 +6,8 @@
 RC_TTY_NUMBER=11
 
 # Set to "yes" if you want the rc system to try and start services
-# in parallel for a slight speed improvement. NOTE: When RC_PARALLEL_STARTUP
-# is enabled, init script output is replaced with simple "service foo
-# starting/stopping" messages so that output is not mixed up.
-# You can stop this from happening on the command line by passing --verbose
-# to the init script or by setting RC_VERBOSE="yes" below.
+# in parallel for a slight speed improvement. NOTE: When enabled
+# init script output is buffered and displayed in one go when finished.
 
 RC_PARALLEL_STARTUP="no"
 
@@ -77,13 +74,16 @@ RC_DOWN_HARDDISK="yes"
 
 RC_VOLUME_ORDER="raid evms lvm dm"
 
-# RC_VERBOSE will make init scripts more verbose. Only networking scripts
-# really use this at this time, and this is useful for trouble shooting
-# any issues you may have.
-# This is also used to re-enable init script output for init scripts
-# started or stopped from the command line.
+# RC_VERBOSE will make init scripts more verbose and adds
+# "Service FOO starting/started/stopping/stopped" messages around each
+# init script.
 
 RC_VERBOSE="no"
+
+# RC_QUIET on the other hand will make init scripts quiet and produce no
+# output.
+
+RC_QUIET="no"
 
 # RC_BOOTLOG will generate a log of the boot messages shown on the console.  
 # Useful for headless machines or debugging.  You need to emerge the 
